[tool.poetry]
name = "mutt2tw"
version = "0.1.0"
description = "Utlities to push a mail message to taskwarriror and search for the message contents"
authors = ["Alex Kelly <kellya@arachnitech.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
notmuch = "^0.29.2"
html2text = "^2020.1.16"
taskw = "^1.3.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
